--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -47,7 +47,7 @@
         </div>
       </div>
       <div class="dropdown dropdown-top">
-        <label tabindex="0" class="btn btn-secondary">
+        <label tabindex="0" class="btn btn-primary">
           Change Background (A Selection of My Photography)
         </label>
         <ul tabindex="0" class="menu dropdown-content bg-base-100 rounded-box shadow">
